Fixed marathon compilation

--- a/roles/marathon/tasks/main.yml
+++ b/roles/marathon/tasks/main.yml
@@ -15,7 +15,7 @@
   sudo: yes
 
 - name: compiling Marathon
-  shell: cd /opt/marathon && sbt assembly
+  command: chdir=/opt/marathon sbt package
   sudo: yes
 
 - name: start Marathon
