--- a/roles/mesos-master/tasks/main.yml
+++ b/roles/mesos-master/tasks/main.yml
@@ -1,11 +1,8 @@
 - name: check for working directory
-  file: path=/var/lib/mesos state=directory
-  sudo: yes
+  file: path={{ mesos_work_dir }} state=directory
 
 - name: check for 'daemonize'
-  yum: name=https://forensics.cert.org/centos/cert/7/x86_64/daemonize-1.7.3-7.el7.x86_64.rpm state=present
-  sudo: yes
+  yum: name={{ daemonize_rpm }} state=present
 
 - name: start Mesos master
-  shell: daemonize /usr/local/sbin/mesos-master --work_dir=/var/lib/mesos
-  sudo: yes
+  shell: daemonize {{ mesos_compile_dir }}/sbin/mesos-master --work_dir={{ mesos_work_dir }}
