--- a/roles/mesos-master/defaults/main.yml
+++ b/roles/mesos-master/defaults/main.yml
@@ -1,5 +1,4 @@
-mesos_master: node1
+mesos_work_dir: "/var/lib/mesos"
 mesos_compile_dir: "/usr/local"
-mesos_tmp_dir: "/tmp/mesos"
 
 daemonize_rpm: "https://forensics.cert.org/centos/cert/7/x86_64/daemonize-1.7.3-7.el7.x86_64.rpm"
