Completed configuring Kafka role. Completed Kafka testing

--- a/roles/kafka/defaults/main.yml
+++ b/roles/kafka/defaults/main.yml
@@ -1,4 +1,7 @@
 mesos_master: node1
+mesos_compile_dir: "/usr/local"
+
+daemonize_rpm: "https://forensics.cert.org/centos/cert/7/x86_64/daemonize-1.7.3-7.el7.x86_64.rpm"
 
 kafka_mesos_git_repo: "https://github.com/mesos/kafka"
 kafka_path: "/opt/kafka"
