Moved Kafka properties file to templates. Coverted hardcoded master Mesos node to variable in Kafka properties

--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -12,7 +12,9 @@
   get_url: url={{kafka_dist}} dest={{kafka_path}}/{{kafka_dist_name}}
 
 - name: copying properties file in order to be able to start Kafka
-  copy: src=kafka-mesos.properties.j2 dest={{kafka_path}}/kafka-mesos.properties
+  template:
+    src=kafka-mesos.properties.j2
+    dest={{kafka_path}}/kafka-mesos.properties
 
 - name: check for 'daemonize'
   yum: name={{ daemonize_rpm }} state=present
