Added ability to add brokers and start them

--- a/roles/kafka/defaults/main.yml
+++ b/roles/kafka/defaults/main.yml
@@ -7,3 +7,7 @@ kafka_mesos_git_repo: "https://github.com/mesos/kafka"
 kafka_path: "/opt/kafka"
 kafka_dist: "https://archive.apache.org/dist/kafka/0.8.2.2/kafka_2.10-0.8.2.2.tgz"
 kafka_dist_name: "kafka_2.10-0.8.2.2.tgz"
+
+brokers: "1..2"
+brokers_cpu: "0.1"
+brokers_mem: "128"
