--- a/roles/mesos-slave/tasks/main.yml
+++ b/roles/mesos-slave/tasks/main.yml
@@ -5,4 +5,4 @@
   yum: name={{ daemonize_rpm }} state=present
 
 - name: start Mesos slave
-  shell: daemonize {{ mesos_compile_dir }}/sbin/mesos-slave --master={{ mesos_master }}:5050
+  shell: daemonize {{ mesos_compile_dir }}/sbin/mesos-slave --master={{ mesos_master }}:5050 --containerizers={{ mesos_containers }}
