--- a/roles/marathon/tasks/main.yml
+++ b/roles/marathon/tasks/main.yml
@@ -14,4 +14,4 @@
   command: chdir={{ marathon_sources_local }} sbt package
 
 - name: start Marathon
-  shell: daemonize {{ marathon_sources_local }}/bin/start --master zk://{{ mesos_master }}:2181/mesos --zk zk://{{ mesos_master }}:2181/marathon
+  shell: daemonize {{ marathon_sources_local }}/bin/start --master {{ mesos_master }}:5050 --zk zk://{{ mesos_master }}:2181/marathon
