Added check for docker during deploying mesos slave

--- a/roles/mesos-slave/tasks/main.yml
+++ b/roles/mesos-slave/tasks/main.yml
@@ -4,5 +4,8 @@
 - name: check for 'daemonize'
   yum: name={{ daemonize_rpm }} state=present
 
+- name: checking for docker
+  yum: name=docker state=present
+
 - name: start Mesos slave
   shell: daemonize {{ mesos_compile_dir }}/sbin/mesos-slave --master={{ mesos_master }}:5050 --containerizers={{ mesos_containers }}
